--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2"
