added code for cards and tailwind

--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
   "homepage": "https://github.com/shubhambaghel34/react-web#readme",
   "devDependencies": {
     "parcel": "^2.9.3",
+    "postcss": "^8.4.27",
     "prettier": "3.0.1",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "tailwindcss": "^3.3.3"
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "styled-components": "^6.0.7"
   },
   "browserslist": [
     "last 2 versions"
